--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@ body {
     --hue: 150;
     --main-colour: hsl(var(--hue), 62%, 67%);
     --dark-colour: hsl(var(--hue), 84%, 10%);
+
+
+    margin-bottom: 200px;
 }
 
 /* List selectors to apply a rule to multiple selectors at once. */
@@ -111,26 +114,10 @@ nav {
     background-color: var(--main-colour);
 }
 
-nav a {
-    color: black;
-    text-decoration: none;
-}
-nav a:hover {
-    /* font-size: 1.2em; */
-    transform: scale(1.2);
-}
 nav a:visited {
     color: black;
 }
 
-a {
-    color: var(--main-colour);
-    font-weight: bold;
-}
-
-a:hover {
-    color: var(--dark-colour);
-}
 
 a:focus {
     outline: red solid 4px;
@@ -173,3 +160,176 @@ button:active {
     bottom: -20px;
     right: -20px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/* Week 6 code starts here */
+
+
+a {
+    color: var(--main-colour);
+    font-weight: bold;
+    transition: color 0.25s, transform 1s;
+}
+
+a:hover {
+    color: var(--dark-colour);
+}
+
+
+
+
+p{
+    transition: font-size 1s 0.25s ease;
+}
+
+p:hover{
+    font-size: 1.1em;
+}
+
+
+h2{
+    background-color: aquamarine;
+    margin:50px;
+    border: 4px solid grey;
+    transition: transform 1s;
+}
+
+
+.scale-big:hover{
+    transform: scale(1,1.5);
+}
+
+.scale-XY:hover{
+    transform: scaleX(1.1) scaleY(1.5);
+
+}
+
+.translate:hover{
+    transform: translate(-0, -250px);
+}
+.rotate:hover{
+    transition: transform 7.5s ease;
+    transform: rotate(100deg);
+}
+
+.origin-left{
+    transform-origin: left;
+}
+
+
+nav a {
+    color: black;
+    text-decoration: none;
+    animation: wiggle 2s 1s infinite alternate ease-in-out both;
+    
+    animation-name:wiggle;
+    animation-iteration-count:infinte ;
+    animation-delay: 1s;
+    animation-duration: 2s;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode:both;
+
+}
+nav a:hover {
+    /* font-size: 1.2em; */
+   /* transform: scale(1.2); */
+
+
+}
+
+
+nav a:nth-child(1){
+    animation-delay: 0.25s;
+}
+nav a:nth-child(2){
+    animation-delay: 0.5s;
+}
+nav a:nth-child(3){
+    animation-delay: 0.75s;
+}
+
+@keyframes shake {
+    from{
+        transform: rotate(0.1turn);
+
+    }
+
+    to{
+        transform: rotate(-0.1turn);
+
+    }
+}
+
+@keyframes wiggle{
+    0%{
+        transform: translate(0,0) rotate(0turn);
+    }
+
+    25%{
+        transform: translate(-5px,5px) rotate(0.01turn);
+    }
+
+    50%{
+        transform: translate(10,-10) rotate(0turn);
+    }
+    75%{
+        transform: translate(5,-5) rotate(-0.01turn);
+    }
+    100%{
+        transform: translate(0,0) rotate(0turn);
+    }
+
+}
+
+
+
+h1 span{
+    /*transition: padding 1s 0.25s ease-in-out;*/
+    transition: padding 1s 0.25s cubic-bezier(1,-0.01,.27,1);
+    animation: colours 2.5s linear infinite;
+    
+}
+
+h1 span:nth-child(2){animation-delay: 0.2s;}
+h1 span:nth-child(3){animation-delay: 0.4s;}
+h1 span:nth-child(4){animation-delay: 0.6s;}
+h1 span:nth-child(5){animation-delay: 0.8s;}
+h1 span:nth-child(6){animation-delay: 1.0s;}
+
+
+h1:hover{
+    padding-left: 200px;
+    transition-duration: 2s;
+    transition-delay:0.25s;
+}
+
+@keyframes colours{
+    0%, 100%{
+        color: red;
+    }
+
+    25%{
+        color: green;
+    }
+
+    50%{
+            color: blue;
+    }
+
+    75%{
+        color: yellow;
+    }
+
+}
+
